--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,6 +14,11 @@
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
+    <div class="section">
+      <a href="/auth/google" class="btn red darken-1">
+        <i class="fab fa-google left"></i> Log In With Google
+      </a>
+    </div>
   </div>
   <div class="login-card">
     <h2 class="page-title">Signup</h2>
