added a new button on the dashboard.handlebars

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,1 +1,8 @@
-<h2>This is Dashboard</h2>
+<a href="/dashboard/create">
+<button class="btn post-btn"> Create a new Post</button>
+</a>
+  {{!-- <div class="user-post">
+    <p>{{post.title}}</p>
+    <p>{{post.content}}</p>
+  </div>
+</script> --}}
