--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,7 +1,9 @@
 <section class="card">
+  <a href="/post/{{id}}">
   <header>
     <h3>{{title}}</h3>
-    <span>Powered by {{user.username}} on {{format_date createdAt}}</span>
+    <span>Powered by {{traveller.username}} on {{format_date createdAt}}</span>
   </header>
+  </a>
   <p>{{text}}</p>
 </section>
