added another nav link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/dashboard">Dashboard</a>
+    <a href="/plan-your-trip">Plan Your Trip!</a>
     {{#if loggedIn}}
     <button id="logout" class="btn-no-style">Logout</button>
     {{else}}
