--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
 }
 
 body {
+  background-image: url(../images/shutterstock_102245596.jpeg);
   font-family: Arial;
   margin: 0;
   display: flex;
@@ -108,7 +109,6 @@ img {
 /* CARDS */
 .card {
   margin: 20px;
-  /* flex: 0 1 300px; */
   border: 7px double var(--dark);
   border-radius: 10px;
   background-color: var(--light);
@@ -159,12 +159,170 @@ img {
 /* LAYOUT */
 .container {
   display: flex;
+  flex-direction: column;
   flex-flow: column wrap;
   align-content: flex-start;
   align-items: center;
+  border-radius: 2rem;
+
+  @media only screen and (min-width: 350px) {
+    height: auto;
+  }
+
+  @media only screen and (min-width: 576px) {
+    width: 85vw;
+  }
+
+  @media only screen and (min-width: 768px) {
+    flex-direction: row;
+    height: auto;
+    justify-content: space-between;
+    width: 75vw;
+  }
 }
 
 textarea {
   width: 94%;
   margin: 3%;
 }
+
+#planner {
+  text-align: center;
+}
+
+h2 { padding: 0.5rem; }
+
+.card-planner {
+  width: 100%;
+  padding: 5px;
+  border: 7px double var(--dark);
+  border-radius: 10px;
+  background-color: var(--light);
+  color: var(--dark);
+}
+
+.form-content {
+  align-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(2rem, 1fr));
+  grid-template-rows: 1fr 1fr 1fr min-content 1fr 1fr;
+  grid-gap: 0.1rem;
+  justify-content: center;
+  padding: 0 1rem;
+  margin-top: 30px;
+  height: 50vh;
+  width: 100%;
+
+  @media only screen and (min-width: 576px) {
+    width: 90%;
+  }
+
+  @media only screen and (min-width: 768px) {
+    justify-content: space-between;
+    margin: 0 2rem;
+  }
+
+  @media only screen and (min-width: 992px) {
+    grid-template-rows: repeat(7, 1fr);
+    margin: 0 4rem;
+  }
+}
+
+.form-input {
+  border: 0.1rem solid rgba(0, 0, 0, .1);
+  border-radius: 0.4rem;
+  font-size: 0.8rem;
+  line-height: 1.5;
+  margin: 0.1rem;
+  outline: none;
+  padding: 0.5rem 0.3rem;
+
+  @media only screen and (min-width: 350px) {
+    font-size: 0.6rem;
+  }
+
+  @media only screen and (min-width: 768px) {
+    font-size: 0.8rem;
+  }
+}
+
+.input-from {
+  padding: 0.5rem;
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.input-to {
+  padding: 0.5rem;
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+
+.date-label {
+  font-size: 1rem;
+  height: auto;
+  grid-column: 1/3;
+  grid-row: 4/5;
+  opacity: 0.8;
+  text-align: left;
+
+  @media only screen and (min-width: 350px) {
+    font-size: 0.8rem;
+  }
+}
+
+.input-date {
+  background: rgba(0, 0, 0, .1);
+  border: 0.1rem solid rgba(0, 0, 0, .1);
+  grid-column: 1/3;
+  grid-row: 5/6;
+  height: auto;
+  font-size: 1rem;
+  outline: none;
+  text-align: left;
+  width: 100%;
+
+  @media only screen and (min-width: 350px) {
+    font-size: 0.8rem;
+  }
+
+  @media only screen and (min-width: 768px) {
+    padding: 0.5rem 0.3rem;
+  }
+
+  @media only screen and (min-width: 992px) {
+    padding: 1rem 0.3rem;
+  }
+
+}
+
+.input-submit {
+  background: linear-gradient(120deg, 0%, 100%);
+  border: black 0.1rem solid;
+  border-radius: 3rem;
+  color: black;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  grid-column: 1/3;
+  grid-row: 6/7;
+  margin: 2.5rem 0 1.5rem 0;
+  opacity: 0.8;
+  /*padding: 0.5rem;*/
+  width: 100%;
+
+  @media only screen and (min-width: 350px) {
+    margin-bottom: 1rem;
+
+  }
+
+  @media only screen and (min-width: 576px) {
+    margin-bottom: 1.5rem;
+  }
+
+  @media only screen and (min-width: 768px) {
+    padding: 0.8rem;
+  }
+
+}
+
