--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,6 @@
 :root {
-  --primary: #3d5852;
-  --secondary: #86938f;
-  --tertiary: #5e877f;
-  --quatrinary: #6c6b67;
+  --primary: #faedcd;
+  --secondary: #fed9b7;
   --light: #e3e4e3;
   --dark: #182c23;
   --error: rgb(228, 46, 1);
@@ -17,7 +15,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   justify-content: flex-start;
-  background-color: var(--quatrinary);
+  background-color: var(--primary);
 }
 
 a {
@@ -33,7 +31,7 @@ header {
   padding: 40px;
   text-align: center;
   background: var(--primary);
-  color: var(--light);
+  color: var(--dark);
 }
 
 main {
@@ -44,10 +42,10 @@ main {
 
 aside {
   flex: 0;
-  background-color: var(--tertiary);
+  background-color: var(--secondary);
   padding: 80px;
   text-align: left;
-  color: var(--light);
+  color: var(--dark);
 }
 
 nav {
@@ -78,7 +76,7 @@ nav a:hover {
 }
 
 .btn-no-style {
-  background: none;
+  background:none;
   border: none;
   padding: 0;
   cursor: pointer;
@@ -86,6 +84,11 @@ nav a:hover {
   font-size: 100%;
   transition: color 0.1s;
   margin-left: 16px;
+}
+
+.btn.post-btn {
+  background-color: green;
+  color: dark;
 }
 
 img {
@@ -112,7 +115,7 @@ img {
   /* flex: 0 1 300px; */
   border: 7px double var(--dark);
   border-radius: 10px;
-  background-color: var(--light);
+  background-color: var(--primary);
   color: var(--dark);
   width: 100%;
 }
@@ -126,16 +129,16 @@ img {
   border-radius: var(--border-radius);
   border-style: double;
   border-width: thick;
-  background-color: #577a7c;
-  color: var(--light);
+  background-color: #fed9b7;
+  color: var(--dark);
 }
 
 .card header {
-  color: var(--light);
+  color: var(--dark);
   font-weight: bold;
   text-transform: uppercase;
   margin: 0;
-  background-color: var(--tertiary);
+  background-color: var(--secondary);
   padding: 0.625rem;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
 }
@@ -194,11 +197,12 @@ textarea {
 h2 { padding: 0.5rem; }
 
 .card-planner {
-  width: 100%;
-  padding: 5px;
+  width: 70%;
+  margin-left: 150px;
+  padding: 10px;
   border: 7px double var(--dark);
   border-radius: 10px;
-  background-color: var(--light);
+  background-color: var(--secondary);
   color: var(--dark);
 }
 
@@ -208,9 +212,11 @@ h2 { padding: 0.5rem; }
   grid-template-columns: repeat(2, minmax(2rem, 1fr));
   grid-template-rows: 1fr 1fr 1fr min-content 1fr 1fr;
   grid-gap: 0.1rem;
-  justify-content: center;
-  padding: 0 1rem;
-  margin-top: 30px;
+
+  /* justify-content: center; */
+  /* padding: 0 1rem; */
+  /* margin-top: 30px; */
+  margin-left: 30px;
   height: 50vh;
   width: 100%;
 
@@ -249,20 +255,20 @@ h2 { padding: 0.5rem; }
 
 .input-from {
   padding: 0.5rem;
-  grid-column: 1/3;
+  grid-column: 5/7;
   grid-row: 2/3;
 }
 
 .input-to {
   padding: 0.5rem;
-  grid-column: 1/3;
+  grid-column: 5/7;
   grid-row: 3/4;
 }
 
 .date-label {
   font-size: 1rem;
   height: auto;
-  grid-column: 1/3;
+  grid-column: 5/7;
   grid-row: 4/5;
   opacity: 0.8;
   text-align: left;
@@ -275,7 +281,7 @@ h2 { padding: 0.5rem; }
 .input-date {
   background: rgba(0, 0, 0, .1);
   border: 0.1rem solid rgba(0, 0, 0, .1);
-  grid-column: 1/3;
+  grid-column: 5/7;
   grid-row: 5/6;
   height: auto;
   font-size: 1rem;
@@ -298,18 +304,18 @@ h2 { padding: 0.5rem; }
 }
 
 .input-submit {
-  background: linear-gradient(120deg, 0%, 100%);
+  background: #faedcd;
   border: black 0.1rem solid;
   border-radius: 3rem;
   color: black;
   font-size: 1.4rem;
   font-weight: bold;
   letter-spacing: 2px;
-  grid-column: 1/3;
+  grid-column: 5/7;
   grid-row: 6/7;
-  margin: 2.5rem 0 1.5rem 0;
+  /* margin: 2.5rem 0 1.5rem 0; */
   opacity: 0.8;
-  /*padding: 0.5rem;*/
+  /* padding: 0.5rem; */
   width: 100%;
 
   @media only screen and (min-width: 350px) {
