--- a/views/dashboard-create.handlebars
+++ b/views/dashboard-create.handlebars
@@ -1,13 +1,17 @@
 <section class="card">
   <h2 class="page-title">Create New Post</h2>
-  <form class="form">
+  <form class="form" action="/api/post/" method="POST" enctype="multipart/form-data">
     <div class="form-group">
       <label for="title">Title</label>
-      <input class="form-input" type="text" id="title" />
+      <input class="form-input" type="text" id="title" name="title"/>
     </div>
     <div class="form-group">
       <label for="content">Content</label>
       <textarea name="content" id="content" rows="5"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="image">Image</label><br>
+      <input type="file" name="image" />
     </div>
     <div class="form-group">
       <button class="btn btn-primary add-post-btn" type="submit">Create</button>
@@ -15,4 +19,4 @@
   </form>
 </section>
 
-<script src="/js/addPost.js"></script>
+{{!-- <script src="/js/addPost.js"></script> --}}
