--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -5,5 +5,6 @@
     <span>Powered by {{traveller.username}} on {{format_date createdAt}}</span>
   </header>
   </a>
+    <img src="{{image}}" alt="">
   <p>{{text}}</p>
 </section>
