made UI changes in CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,12 @@ nav a:hover {
   color: dark;
 }
 
+.btn.comment-btn {
+  background-color: green;
+  color: #182c23;
+}
+
+
 img {
   max-width: 100%;
   height: auto;
