--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -10,9 +10,10 @@
                 autocomplete="on" required>
             <input id="destination" type="text" class="form-input input-to" name="to" placeholder="traveling to:"
                 autocomplete="on" required>
-            <label class="date-label" for="date">Travel starts on</label>
+            <label class="date-label" for="date">Departing on</label>
             <input id="departure" type="date" class="form-input input-date" name="date" required>
-            <button class="input-submit">Submit</button>
+            <button id="submit-btn" type="submit" class="input-submit" name="submit">Submit</button>
         </form>
     </div>
 </section>
+<script src="/js/trip-handler.js"></script>
