added trip handle bars price info and trip fetch

--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -15,5 +15,10 @@
             <button id="submit-btn" type="submit" class="input-submit" name="submit">Submit</button>
         </form>
     </div>
+    <div class="trip-result">
+        <p>ticket price <span id="trip-result-price"></span> </p>
+        <p>departure time<span id="trip-result-departure-time"></span></p>
+        <p>arrival time<span id="trip-result-arrival-time"></span></p>
+    </div>
 </section>
 <script src="/js/trip-handler.js"></script>
