--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,7 +190,9 @@ textarea {
   text-align: center;
 }
 
-h2 { padding: 0.5rem; }
+h2 {
+  padding: 0.5rem;
+}
 
 .card-planner {
   width: 100%;
@@ -324,4 +326,27 @@ h2 { padding: 0.5rem; }
     padding: 0.8rem;
   }
 
+}
+
+.trip-results {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+}
+
+.result-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: left;
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
+  font-size: 0.7rem;
+  line-height: 1.3;
+  padding: 1rem;
+
+  @media only screen and (min-width: 768px) {
+    font-size: 1.7vw;
+  }
 }
