trip-results search complete with front-end form output

--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -16,12 +16,10 @@
         </form>
     </div>
     <div class="trip-result">
-        <p>Ticket price<span id="trip-result-price" type="text" class="result-content"></span></p>
-        <form class="form-content">
-            <label class="result-content" for="time">Departure time</label>
-            <input id="departure-time" type="time" class="result-content">
-            <label class="result-content" for="time">Arrival time</label>
-            <input id="arrival-time" type="time" class="result-content">
+        <p>Total price in economy class, in USD: <span id="trip-result-price" type="text" class="spanclass"></span></p>
+        <p>Your Itineraries are listed below: <span id="trip-result-itineraries" type="text" class="spanclass"></span></p>
+            <p>Departure: <span id="trip-result-departure" type="date" class="yyyy-MM-dd'T'HH:mm:ss.SSS"></span></p>
+            <p>Arrival: <span id="trip-result-arrival" type="date" class="yyyy-MM-dd'T'HH:mm:ss.SSS"></span></p>
         </form>
     </div>
 </section>
