--- a/public/css/style.css
+++ b/public/css/style.css
@@ -344,14 +344,16 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: left;
+  align-items: center;
 }
-
+.spanclass {
+  float:center;
+}
 .result-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: left;
+  align-items: center;
   border-top-right-radius: inherit;
   border-bottom-right-radius: inherit;
   font-size: 0.7rem;
