--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,7 +4,7 @@
         <div class="column is-half">
           <h1 class="title has-text-centered">Signup</h1>
           <div class="box">
-            <form >
+            <form id="form-signup">
               <div class="field">
                 <label class="label">Name</label>
                 <div class="control">
