--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
               Dashboard
             </a>
             <hr class="navbar-divider">
-            <a class="navbar-item" href="/logout">
+            <a class="navbar-item" href="/api/travellers/logout">
               Logout
             </a>
           </div>
