--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,5 @@
+<a class="button is-primary" href="/dashboard/create">+ New Post</a>
+
 {{#each posts as |post|}}
 {{> user-post}}
 {{/each}}
-
-<a href="/dashboard/create">
-    <button class="btn post-btn">+ New Post</button>
-</a>
