--- a/views/dashboard-create.handlebars
+++ b/views/dashboard-create.handlebars
@@ -1,20 +1,36 @@
-<section class="card">
-  <h2 class="page-title">Create New Post</h2>
-  <form class="form" action="/api/post/" method="POST" enctype="multipart/form-data">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input class="form-input" type="text" id="title" name="title"/>
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-11-mobile is-10-tablet is-9-desktop is-8-widescreen">
+        <h3 class="title is-3">Create New Post</h3>
+        <div class="box">
+          <form class="form" action="/api/post/" method="POST" enctype="multipart/form-data">
+            <div class="field">
+              <label class="label" for="title">Title</label>
+              <div class="control">
+                <input class="input" type="text" name="title" placeholder="" required/>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label" for="content">Content</label>
+              <div class="control">
+                <textarea class="textarea" name="content" rows="10" placeholder="" required></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label" for="image">Image</label>
+              <div class="control">
+                <input class="file" type="file" name="image" />
+              </div>
+            </div>
+            <div class="field">
+              <div class="control">
+                <button class="button is-primary" type="submit">Create</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="content">Content</label>
-      <textarea name="content" id="content" rows="5"></textarea>
-    </div>
-    <div class="form-group">
-      <label for="image">Image</label><br>
-      <input type="file" name="image" />
-    </div>
-    <div class="form-group">
-      <button class="btn btn-primary add-post-btn" type="submit">Create</button>
-    </div>
-  </form>
+  </div>
 </section>
