--- a/views/dashboard-edit.handlebars
+++ b/views/dashboard-edit.handlebars
@@ -1,20 +1,40 @@
-<section class="card">
-  <h2 class="page-title">Edit Post</h2>
-  <form class="form">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input class="form-input" type="text" id="title" value="{{post.title}}"/>
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-11-mobile is-10-tablet is-9-desktop is-8-widescreen">
+        <h3 class="title is-3">Edit Post</h3>
+        <div class="box">
+          <form class="form" >
+            <div class="field">
+              <label class="label" for="title">Title</label>
+              <div class="control">
+                <input id="title" class="input" type="text" name="title" value="{{post.title}}" required />
+              </div>
+            </div>
+            <div class="field">
+              <label class="label" for="content">Content</label>
+              <div class="control">
+                <textarea id="content" class="textarea" name="content" rows="10" required>{{post.text}}</textarea>
+              </div>
+            </div>
+            <div class="field">
+              <label class="label" for="image">Image</label>
+              <div class="control">
+                <input id="image" class="file" type="file" name="image" />
+              </div>
+            </div>
+            <div class="field">
+              <div class="control">
+                <button class="button is-primary update-post-btn" 
+                type="submit">Update</button>
+                <button class="button is-light delete-post-btn" type="submit">Delete</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="content">Content</label>
-      <textarea name="content" id="content" rows="5">{{post.text}}</textarea>
-    </div>
-    {{!-- TODO: allow user edit image --}}
-    <div class="form-group">
-      <button class="btn btn-primary update-post-btn" type="submit">Update Post</button>
-      <button class="btn btn-primary delete-post-btn" type="submit">Delete Post</button>
-    </div>
-  </form>
+  </div>
 </section>
 
 <script src="/js/editPost.js"></script>
