--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -20,7 +20,7 @@
             </header>
             <div>
               <textarea class="textarea my-2" id="comment" placeholder=""></textarea>
-              <button class="button is-primary comment-btn">Normal</button>
+              <button class="button is-primary comment-btn">Comment</button>
             </div>
           </div>
         </section>
