improve pages layout

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,7 @@
-<a class="button is-primary" href="/dashboard/create">+ New Post</a>
+<section class="section">
+  <a class="button is-primary" href="/dashboard/create">+ New Post</a>
 
-{{#each posts as |post|}}
-{{> user-post}}
-{{/each}}
+  {{#each posts as |post|}}
+  {{> user-post}}
+  {{/each}}
+</section>
