--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,13 @@
 <section class="section">
-  <div class="container">
     <div class="tabs">
       <ul>
         <li class="is-active"><a href="/">For you</a></li>
         <li><a href="">Following</a></li>
       </ul>
     </div>
+
     <div class="columns is-centered">
-      <div class="column is-full-mobile is-10-tablet is-8-desktop ">
+      <div class="column is-full-mobile is-10-tablet is-8-desktop is-6-widescreen">
         {{#each posts as |post|}}
         {{>post-details}}
         {{/each}}
