--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,5 +1,5 @@
-<div class="card columns is-centered my-2">
-  <div class="card-content column mx-3">
+<div class="card columns my-2 mx-0 is-centered">
+  <div class="card-content column">
     <div class="media">
       {{#if traveller.image}}
       <div class="media-left">
@@ -22,7 +22,7 @@
 
   {{#if image}}
   <div class="card-image column">
-    <figure class="image is-3by2">
+    <figure class="image">
       <img src="{{image}}" alt="">
     </figure>
   </div>
