--- a/views/partials/user-post.handlebars
+++ b/views/partials/user-post.handlebars
@@ -1,4 +1,4 @@
-<div class="card columns is-centered my-2">
+<div class="card columns is-centered my-2 mx-0">
   <div class="card-content column mx-3">
     <a href="/dashboard/post/{{id}}">
       <h4 class="title is-4 mb-2">{{title}}</h4>
@@ -9,7 +9,7 @@
 
   {{#if image}}
   <div class="card-image column">
-    <figure class="image is-3by2">
+    <figure class="image">
       <img src="{{image}}" alt="">
     </figure>
   </div>
