--- a/views/dashboard-edit.handlebars
+++ b/views/dashboard-edit.handlebars
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
-      <div class="column is-11-mobile is-10-tablet is-9-desktop is-8-widescreen">
+      <div class="column is-full-mobile is-10-tablet is-8-desktop is-8-widescreen">
         <h3 class="title is-3">Edit Post</h3>
         <div class="box">
           <form class="form" >
