--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,10 +1,9 @@
 <section class="section">
-  <div class="container">
     <div class="columns is-centered">
-      <div class="column is-11-mobile is-10-tablet is-9-desktop is-8-widescreen">
+      <div class="column is-full-mobile is-10-tablet is-8-desktop is-6-widescreen">
         <h3 class="title is-3">{{post.title}}</h3>
         {{#if post.image}}
-        <figure class="image is-16by9">
+        <figure class="image">
           <img src="{{post.image}}" alt="">
         </figure>
         {{/if}}
@@ -31,6 +30,5 @@
         {{> comment-details}}
         {{/each}}
       </div>
-    </div>
   </div>
 </section>
